	Refactor maps
	Add world continents
	Add swiss cantons map (thanks sergedroz)
	Add inverse_y_axis options to reverse graph (#24)
	Fix DateTimeLine time data loss (#193)
	Fix no data for graphs with only zeroes (#148)
	Support value formatter for pie graphs (#218) (thanks never-eat-yellow-snow)
	Add new Box plot modes and outliers and set extremes as default (#226 #121 #149) (thanks djezar)

V 1.7.0
	Remove DateY and replace it by real XY datetime, date, time and timedelta support. (#188)
	Introduce new XY configuration options: `xrange`, `x_value_formatter`.
	Add show_x_labels option to remove them and the x axis.
	Set print_values to False by default.
	Fix secondary serie text values when None in data. (#192)

V 1.6.2
	Add margin_top, margin_right, margin_bottom, margin_left options which defaults to margin. (thanks djt)
	Update django mime parameter from mimetype to content_type. (thanks kswiat)
	Allow a color and a style parameter to value metadata.

	V 1.6.1
	Fix Decimal incompatibility

V 1.6.0
	Adds config option missing_value_fill_truncation. (thanks sirlark)
	Avoid HTTP 301 Moved Permanently (thanks jean)
	Add a Django response method (thanks inlanger)
	Fix setup.py (#170)
	Fix format error on list like in table
	Add legend_at_bottom_columns option to specify number of columns in legend when at bottom. (#157)
	Fix secondary interpolation (#165)
	Adds an extra class (axis) to horizontal guides if the label is "0" (#147) (thanks sirlark)
	Add line stroke customization parameters to style.py (#154) (thanks blakev)

V 1.5.1
	Add `stack_from_top` option to reverse stack graph data order
	Minor fix for empty logarithmic chart
	Reorders axes in SVG output. Fix #145 (thanks sirlark)

V 1.5.0
	Add per serie configuration
	Add half pie (thanks philt2001)
	Make lxml an optionnal dependency (huge speed boost in pypy)
	Add render_table (WIP)
	Support colors in rgb / rgba for parametric styles

V 1.4.6
	Add support for \n separated multiline titles (thanks sirlark)